<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:compat="http://schemas.android.com/apk/res-auto" >

    <!-- Reply -->
    <item android:id="@+id/action_reply"
          android:icon="@drawable/ic_action_email"
          android:title="@string/action_reply"
          android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/action_more">
        <menu>
            
            <!-- Report -->
		    <item android:id="@+id/action_report"
		          android:icon="@drawable/ic_action_send_now"
		          android:title="@string/action_report"
		          android:showAsAction="ifRoom|withText" />
		    
		    <!-- Remove -->
		    <item android:id="@+id/action_remove"
		          android:icon="@drawable/ic_action_remove"
		          android:title="@string/action_remove"
		          android:showAsAction="ifRoom|withText" />
		    
		    <!-- Edit -->
		    <item android:id="@+id/action_edit"
		          android:icon="@drawable/ic_action_edit"
		          android:title="@string/action_edit"
		          android:showAsAction="ifRoom|withText" />
        </menu>
 	</item>
</menu>